nullaway_error_067CFDB3-9D64-4C92-B987-FABCCE4F899E.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/NoHandlerFoundException.java:63: error: [NullAway] passing @Nullable parameter 'getMessage()' where @NonNull is required
		this.body = ProblemDetail.forStatusAndDetail(getStatusCode(), getMessage());
		                                                                        ^
    (see http://t.uber.com/nullaway )
